Register画面にて戻るボタンと登録ボタン押下時のエラーメッセージ表示の実装

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,6 +13,11 @@
     <color name="white">#FFFFFFFF</color>
 
 
+    <!-- Error SnackBar -->
+    <color name="colorSnackBarSuccess">#8BC34A</color>
+    <color name="colorSnackBarError">#F72400</color>
+
+    <!-- default -->
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
