--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -82,7 +82,7 @@
         app:layout_constraintTop_toBottomOf="@+id/tv_title_description">
 
         <com.example.myshoppal.util.MSPEditText
-            android:id="@+id/et_email"
+            android:id="@+id/et_email_forgot_pw"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textEmailAddress"
@@ -92,6 +92,7 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.example.myshoppal.util.MSPButton
+        android:id="@+id/btn_submit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
