Create COMPLETE PROFILE screen

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,6 +12,8 @@
 
     <color name="white">#FFFFFFFF</color>
 
+    <color name="colorLightGrey">#F1F1F1</color>
+
 
     <!-- Error SnackBar -->
     <color name="colorSnackBarSuccess">#8BC34A</color>
