--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,12 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/navigation_home">
+    app:startDestination="@+id/navigation_dashboard">
 
     <fragment
-        android:id="@+id/navigation_home"
+        android:id="@+id/navigation_products"
         android:name="com.example.myshoppal.ui.fragments.ProductsFragment"
-        android:label="@string/title_home"
+        android:label="@string/title_products"
         tools:layout="@layout/fragment_products" />
 
     <fragment
@@ -18,8 +18,8 @@
         tools:layout="@layout/fragment_dashboard" />
 
     <fragment
-        android:id="@+id/navigation_notifications"
+        android:id="@+id/navigation_orders"
         android:name="com.example.myshoppal.ui.fragments.OrdersFragment"
-        android:label="@string/title_notifications"
+        android:label="@string/title_orders"
         tools:layout="@layout/fragment_orders" />
 </navigation>
