--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -4,16 +4,16 @@
     <item
         android:id="@+id/navigation_dashboard"
         android:icon="@drawable/ic_dashboard"
-        android:title="@string/title_home" />
+        android:title="@string/title_dashboard" />
 
     <item
         android:id="@+id/navigation_products"
         android:icon="@drawable/ic_product"
-        android:title="@string/title_dashboard" />
+        android:title="@string/title_products" />
 
     <item
         android:id="@+id/navigation_orders"
         android:icon="@drawable/ic_order"
-        android:title="@string/title_notifications" />
+        android:title="@string/title_orders" />
 
 </menu>
